Jann 30/objects/Deal_History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Current_Status__c</fullName>
        <label>Current Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipName>Deal_History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_History__c</fullName>
        <label>Status History</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Deal Status Tracking</label>
    <nameField>
        <displayFormat>HIS{0000}</displayFormat>
        <label>Deal History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Status Tracking</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>